--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-pdf": "^4.1.0",
     "react-player": "^2.1.0",
+    "react-responsive": "^8.1.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
